--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<!--────────────────Header───────────────-->
 	<header>
 		<a class="logo" href="#home">
-    Design - Code - Love
+    { Design & Code }
 		</a>
 		<nav>	
 		 <ul class="nav-bar"><div class="bg"></div>
@@ -39,7 +39,8 @@
 		 <div class="filter"></div>
 		 <section class="intro">
 		  <h3>Raul Sposito.<hr></h3>
-		  <p>Software Engineer & Designer.</p>
+		  <!-- <p>Software Engineer & Designer.</p> -->
+      <p>Full stack web developer experienced in Ruby on Rails and JavaScript based programming with a background in advertising.</p>
 		  <!-- <p>With some extra features.</p> -->
 			  
 		  <!--────social media links─────-->
@@ -48,7 +49,6 @@
 			  <a href="#" target="_blank"><i class='fab fa-twitter'></i></a>
 			  <a href="https://github.com/raulsposito" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/raul-sposito/" target="_blank"><i class='fab fa-linkedin-in'></i></a>
-			  <!-- <a href="https://www.youtube.com/channel/UCMC1OhfsV5yflgaMSFXL0lw" target="_blank"><i class="fab fa-youtube"></i></a> -->
         <a 
         href="https://dev.to/raulsposito" target="_blank" class="fab">
         <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Raul's DEV Community Profile" style="filter:invert(100%)" height="30" width="30">
@@ -68,28 +68,24 @@
 			<div class="card">
 			    <iframe width="315" height="315" src="https://www.youtube.com/embed/5MqUCobp7aM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			    <a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">Barber Web App.</div></a>
+				<div class="work-content">Barber Web App - Ruby on Rails</div></a>
             </div>
 			<div class="card">
 			    <iframe width="315" height="315" src="https://www.youtube.com/embed/9XGuB8rOtks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">General Services.</div></a>
+				<div class="work-content">General Services - React/Redux</div></a>
             </div>
             <div class="card">
 			    <iframe width="315" height="315" src="https://www.youtube.com/embed/V8bvijOfs-8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">InnerCleaner.</div></a>
+				<div class="work-content">InnerCleaner - Sinatra</div></a>
             </div>
             <div class="card">
 			    <iframe width="315" height="315" src="https://www.youtube.com/embed/PTMeVnYuGos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<a href="" target="_blank"> <!--Link to project-->
-				<div class="work-content">BreakInTech.</div></a>
+				<div class="work-content">BreakInTech</div></a>
             </div> 
-			<div class="card">
-			    <img class="work-img" src="https://images.unsplash.com/photo-1483546416237-76fd26bbcdd1?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80">
-				<a href="https://dev.to/raulsposito" target="_blank"> <!--Link to project-->
-				<div class="work-content">Also check out my coding blog: Self.new</div></a>
-            </div> 	  
+
 		  </div>
 		  </div>
 	  </div>
@@ -104,7 +100,7 @@
 			  <a href="https://github.com/raulsposito" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/raul-sposito/" target="_blank"><i class='fab fa-linkedin-in'></i></a>
         <a 
-        href="https://dev.to/raulsposito" target="_blank" class="fab">
+        href="https://dev.to/raulsposito" target="_blank">
         <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Raul's DEV Community Profile" style="filter:invert(100%)"  height="30" width="30">
         </a>
 		    </div>
