project text intro changed

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	  <!--───────────────Projects───────────────-->
 	  <div id="projects"> 
 		 <h3>Projects.<hr></h3>
-		  <p>A few projects you may like.</p>
+		  <p>Check out my latest work:</p>
 		  <div class="work-box">
 		  <div class="work">
 		<!--───────────────card───────────────-->
