add twitter link

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 		 <section class="intro">
 		  <h3>Raul Sposito.<hr></h3>
 		  <!-- <p>Software Engineer & Designer.</p> -->
-      <p>Full stack web developer experienced in Ruby on Rails and JavaScript based programming with a background in advertising.</p>
+      <p>Full stack web developer with a background in advertising.</p>
 		  <!-- <p>With some extra features.</p> -->
 			  
 		  <!--────social media links─────-->
 			 
 		  <div class="social-media">
-			  <a href="#" target="_blank"><i class='fab fa-twitter'></i></a>
+			  <a href="https://twitter.com/raul_sposito" target="_blank"><i class='fab fa-twitter'></i></a>
 			  <a href="https://github.com/raulsposito" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/raul-sposito/" target="_blank"><i class='fab fa-linkedin-in'></i></a>
         <a 
@@ -96,7 +96,7 @@
 		   <h3>Contact.<hr></h3>
 		   <p>Let's get in touch!</p>
 		    <div class="social-media">
-			  <a href="#" target="_blank"><i class='fab fa-twitter'></i></a>
+			  <a href="https://twitter.com/raul_sposito" target="_blank"><i class='fab fa-twitter'></i></a>
 			  <a href="https://github.com/raulsposito" target="_blank"><i class='fab fa-github'></i></a>
 			  <a href="https://www.linkedin.com/in/raul-sposito/" target="_blank"><i class='fab fa-linkedin-in'></i></a>
         <a 
@@ -108,7 +108,7 @@
 
 	</main>
 	  <footer class="copyright">© 2021 
-		  <a href="https://www.linkedin.com/in/raul-sposito/" target="_blank"> RaulSposito.</a>
+		  <a href="https://www.linkedin.com/in/raul-sposito/" target="_blank"> Raul Sposito.</a>
      </footer>
 	  
   </div>
