fix card to fit iframe

--- a/index.html
+++ b/index.html
@@ -66,22 +66,25 @@
 		  <div class="work">
 		<!--───────────────card───────────────-->
 			<div class="card">
-			    <iframe width="315" height="315" src="https://www.youtube.com/embed/5MqUCobp7aM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-			    <a href="" target="_blank"> <!--Link to project-->
+			    <iframe width="500" height="282" src="https://www.youtube.com/embed/5MqUCobp7aM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          
+			    <a href="https://github.com/raulsposito/barber_web_app" target="_blank">
+
+          <!--Link to project-->
 				<div class="work-content">Barber Web App - Ruby on Rails</div></a>
             </div>
 			<div class="card">
-			    <iframe width="315" height="315" src="https://www.youtube.com/embed/9XGuB8rOtks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<a href="" target="_blank"> <!--Link to project-->
+			    <iframe width="500" height="282" src="https://www.youtube.com/embed/9XGuB8rOtks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<a href="https://github.com/raulsposito/quote-market" target="_blank"> <!--Link to project-->
 				<div class="work-content">General Services - React/Redux</div></a>
             </div>
             <div class="card">
-			    <iframe width="315" height="315" src="https://www.youtube.com/embed/V8bvijOfs-8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-				<a href="" target="_blank"> <!--Link to project-->
+			    <iframe width="500" height="282" src="https://www.youtube.com/embed/V8bvijOfs-8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				<a href="https://github.com/raulsposito/inner_cleaner_sinatra_app" target="_blank"> <!--Link to project-->
 				<div class="work-content">InnerCleaner - Sinatra</div></a>
             </div>
             <div class="card">
-			    <iframe width="315" height="315" src="https://www.youtube.com/embed/PTMeVnYuGos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			    <iframe width="500" height="282" src="https://www.youtube.com/embed/PTMeVnYuGos" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<a href="" target="_blank"> <!--Link to project-->
 				<div class="work-content">BreakInTech</div></a>
             </div> 
@@ -92,6 +95,7 @@
 		 
 		<!--──────────────Contact────────────────-->
 	  <div id="contact">
+      <div class="ctc-bg"></div>
 		  <!--────social media links─────-->
 		   <h3>Contact.<hr></h3>
 		   <p>Let's get in touch!</p>
@@ -103,7 +107,7 @@
         href="https://dev.to/raulsposito" target="_blank">
         <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Raul's DEV Community Profile" style="filter:invert(100%)"  height="30" width="30">
         </a>
-		    </div>
+		  </div>
 		  </div>
 
 	</main>
