--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
         href="https://dev.to/raulsposito" target="_blank" class="fab">
         <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Raul's DEV Community Profile" style="filter:invert(100%)" height="30" width="30">
         </a>
+        <a 
+        href="https://dev.to/raulsposito" target="_blank">
+        <img src="https://pngimg.com/uploads/gmail_logo/gmail_logo_PNG12.png" alt="Raul's Email" style="filter:invert(100%)"  height="30" width="30">
+        </a>
 		    </div>
 			 
 		 </section> 
@@ -74,7 +78,7 @@
 				<div class="work-content">Barber Web App - Ruby on Rails</div></a>
             </div>
 			<div class="card">
-			    <iframe width="500" height="282" src="https://www.youtube.com/embed/9XGuB8rOtks" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			    <iframe width="500" height="282" src="https://www.youtube.com/embed/wqnPb6Nf5vU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 				<a href="https://github.com/raulsposito/quote-market" target="_blank"> <!--Link to project-->
 				<div class="work-content">General Services - React/Redux</div></a>
             </div>
@@ -106,6 +110,10 @@
         <a 
         href="https://dev.to/raulsposito" target="_blank">
         <img src="https://d2fltix0v2e0sb.cloudfront.net/dev-badge.svg" alt="Raul's DEV Community Profile" style="filter:invert(100%)"  height="30" width="30">
+        </a>
+        <a 
+        href="https://dev.to/raulsposito" target="_blank">
+        <img src="https://pngimg.com/uploads/gmail_logo/gmail_logo_PNG12.png" alt="Raul's Email" style="filter:invert(100%)"  height="30" width="30">
         </a>
 		  </div>
 		  </div>
