arrange text for projects

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <div id="projects"> 
       <h3>Projects<hr></h3>
-      <p>Hover to check out my latest work:</p>
+      <p>Check out my latest work:</p>
       <div class="work-box">
         <div class="work">
           <div class="all">
@@ -80,7 +80,7 @@
               <a class="text" href="https://www.youtube.com/embed/V8bvijOfs-8" target="_blank">Inner Cleaner</a>
             </div>
             <div class="center">
-              <div class="explainer"><span>{...}</span></div>
+              <div class="explainer"><span></span></div>
               <a class="text" href="https://github.com/raulsposito/ddr_frontend" target="_blank"><span>Dance Revolution</span></a>
             </div>
             <div class="right">
