add about section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		 <ul class="nav-bar"><div class="bg"></div>
 			<li><a class="nav-link active" href="#home">Home</a></li>
 			<li><a class="nav-link" href="#projects">Projects</a></li>
+      <li><a class="nav-link" href="#about">About</a></li>
 			<li><a class="nav-link" href="#contact">Contact</a></li>
 		 </ul>
 			
@@ -92,6 +93,19 @@
             </div>
         </div>
       </div>
+    </div>
+    <br><br>
+
+    <!--------------- About Me--------  -->
+    <div id="about">
+      <section class="intro">
+        <img class ="me" src="https://avatars.githubusercontent.com/u/15642008?s=460&u=31f51261d5bef99e065d0911438c17f4e07544e4&v=4"><br><br>
+
+        <h3>About<hr></h3>
+        <p>Who am I even?</p>
+        <p>I'm a passionate developer, designer and obsessive learner who loves to create eye catching software and daring interaction concepts.</p>
+
+      </section>
     </div>
 	   
 		<!--──────────────Contact────────────────-->
